--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
     <title>Woohoo angular fun! :D</:D></title>
-    <script src='./js/angular.min.js' charset='utf-8'></script>
+    <script src="./js/angular.min.js" charset='utf-8'></script>
     <script src='./js/index.js' charset='utf-8'></script>
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel='stylesheet' href='./css/index.css'>
   </head>
   <body ng-app='app'>
     <header>
@@ -12,16 +12,17 @@
     <div ng-controller='PandaController' id='pandaController'>
       <h2>Panda Types:</h2>
       <ul>
-        <li class="panda-item" ng-repeat='panda in pandas' ng-click="removePanda($index)">{{panda}}</li>
+        <li class='panda-item item' ng-repeat='panda in pandas | filter: pandaSearch' ng-click='removePanda($index)'>{{panda}}</li>
       </ul>
-
-      <input id="pandaInput" type='text' ng-model='addPandaText'>
-      <input type='button' ng-disabled='addPandaText == ""' ng-click='addPanda(addPandaText)' value='Add Panda'>
+      <div id='addPanda'>
+        <input id='pandaInput' ng-keyup='$event.keyCode == 13 && addPandaText != "" && addPanda(addPandaText)' type='text' ng-model='addPandaText'>
+        <input type='button' ng-disabled='addPandaText == ""' ng-click='addPanda(addPandaText)' value='Add Panda'>
+        <input id='pandaSearch' ng-model='pandaSearch'>
+      </div>
     </div>
-    <div ng-controller="StoryController" id="storyController">
-      <ul>
-        <li class="story-item" ng-repeat="story in stories" ng-click="removeStory($index)">{{story.title}}</li>
-      </ul>
+    <div ng-controller='StoryController' id='storyController'>
+      <story-info>
+      </story-info>
     </div>
   </body>
 </html>
